--- a/src/components/ChatPage/styles.scss
+++ b/src/components/ChatPage/styles.scss
@@ -1,6 +1,47 @@
 .chat-page {
-  > * {
-    display: inline-block;
+  .chat-view {
+    > * {
+      display: inline-block;
+    }
+  }
+
+  .sign-in-view {
+
+    .circle-picker-container {
+      width: 100%;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .sign-in-form {
+      width: 400px;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+
+      > * {
+        display: block;
+        margin-bottom: 1rem;
+      }
+
+      h1 {
+        text-align: center;
+      }
+    }
+
+    .input-label {
+      margin-bottom: 0.5rem;
+    }
+
+    .name-input {
+      width: 100%;
+      height: 1.5rem;
+    }
+
+    .chat-enter-button {
+      float: right;
+    }
   }
 
   .chat-section-container {
