feat: Write message component

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,3 +32,14 @@
     transform: rotate(360deg);
   }
 }
+
+/* generic styles */
+
+.secondary-text {
+  color: gray;
+  font-size: 0.75rem;
+}
+
+.color-circle {
+  border-radius: 50%;
+}
