--- a/src/components/ChatPage/styles.scss
+++ b/src/components/ChatPage/styles.scss
@@ -1,5 +1,9 @@
 .chat-page {
+  height: 100vh;
+
   .chat-view {
+    height: 100%;
+
     > * {
       display: inline-block;
     }
@@ -46,6 +50,14 @@
 
   .chat-section-container {
     width: 66%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    h1 {
+      text-align: center
+    }
   }
 
   .member-list-container {
