--- a/src/components/ChatPage/styles.scss
+++ b/src/components/ChatPage/styles.scss
@@ -3,6 +3,7 @@
 
   .chat-view {
     height: 100%;
+    display: flex;
 
     > * {
       display: inline-block;
@@ -52,8 +53,11 @@
     width: 66%;
     height: 100%;
 
-    display: flex;
-    flex-direction: column;
+    .flex-container {
+      height: 100%;
+      display: flex;
+      flex-direction: column;  
+    }
 
     h1 {
       text-align: center
@@ -62,5 +66,6 @@
 
   .member-list-container {
     width: 33%;
+    height: 100%;
   }
 }
