--- a/src/components/ChatPage/styles.scss
+++ b/src/components/ChatPage/styles.scss
@@ -56,6 +56,7 @@
     .flex-container {
       height: 100%;
       display: flex;
+      justify-content: space-between;
       flex-direction: column;  
     }
 
