feat: Don't let users send empty messages; fix styling of short messages; trim whitespace on usernames and messages when sent

--- a/src/components/Message/styles.scss
+++ b/src/components/Message/styles.scss
@@ -5,6 +5,7 @@
   align-items: stretch;
 
   .message-text-container {
+    display: inline;
     border-radius: 10px;
     padding: 5px;
     background-color: $facebook-blue;
