--- a/src/components/Message/styles.scss
+++ b/src/components/Message/styles.scss
@@ -5,7 +5,7 @@
   align-items: stretch;
 
   .message-text-container {
-    display: inline;
+    display: inline-block;
     border-radius: 10px;
     padding: 5px;
     background-color: $facebook-blue;
