--- a/src/components/Message/styles.scss
+++ b/src/components/Message/styles.scss
@@ -10,6 +10,7 @@
     padding: 5px;
     background-color: $facebook-blue;
     color: white;
+    word-break: break-all;
   
     &.other-party {
       background-color: lightgray;
