--- a/src/components/Message/styles.scss
+++ b/src/components/Message/styles.scss
@@ -6,8 +6,11 @@
 
   .message-text-container {
     display: inline-block;
-    border-radius: 10px;
-    padding: 5px;
+    border-radius: 18px;
+    padding-top: 7px;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
     background-color: $facebook-blue;
     color: white;
     word-break: break-all;
